# companion-bible

./: .clippy.toml  .gitignore  .prettierignore  Cargo.toml  LICENSE.txt  README.md  eslint.config.mjs  package-lock.json  package.json  rustfmt.toml
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit
apps/desktop/: congregation.html  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: congregation.json  operator.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/congregation/: congregation-css.test.ts  congregation.css  main.ts  state-machine.test.ts  state-machine.ts
apps/desktop/src/operator/: App.tsx  CongregationPreview.tsx  ManualHymnOverride.tsx  ManualOverride.test.tsx  ManualOverride.tsx  SermonControls.test.tsx  SermonControls.tsx  StatusBar.test.tsx  StatusBar.tsx  TranscriptPanel.test.tsx  TranscriptPanel.tsx  VerseQueuePanel.test.tsx  VerseQueuePanel.tsx  bibleBooks.test.ts  bibleBooks.ts  main.ts  operator.css  scrollButtons.test.ts  useTranscript.test.ts  useTranscript.ts  useVerseQueue.test.ts  useVerseQueue.ts
apps/desktop/src/shared/: base.css  fonts.css
apps/web/: index.html  landing_page.tsx  package.json  tsconfig.json
apps/web/src/: index.css  main.tsx
scripts/: download_whisper.sh
shared/config/: Cargo.toml
shared/config/src/: lib.rs
shared/errors/: Cargo.toml
shared/errors/src/: lib.rs
shared/events/: Cargo.toml
shared/events/src/: lib.rs
shared/types/: package.json
shared/types/src/: bible.ts  config.ts  detection.ts  events.ts  index.ts  transcription.ts
tools/aai-test/: Cargo.toml
tools/aai-test/src/: main.rs
