[workspace]
resolver = "2"
members = [
    "shared/events",
    "shared/errors",
    "shared/config",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["John Jesuyon <johnjesuyon68@gmail.com>"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
companion-events = { path = "shared/events" }
companion-errors = { path = "shared/errors" }
companion-config = { path = "shared/config" }
