[workspace]
resolver = "2"
members = [
    "shared/events",
    "shared/errors",
    "shared/config",
    "packages/bible",
    "packages/database",
    "packages/audio",
    "packages/transcription",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["John Jesuyon <johnjesuyon68@gmail.com>"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros", "migrate"] }
companion-events = { path = "shared/events" }
companion-errors = { path = "shared/errors" }
companion-config = { path = "shared/config" }
companion-database = { path = "packages/database" }
companion-audio = { path = "packages/audio" }
