[workspace]
resolver = "2"
members = [
    "shared/events",
    "shared/errors",
    "shared/config",
    "packages/bible",
    "packages/database",
    "packages/audio",
    "packages/transcription",
    "packages/detection",
    "packages/context",
    "packages/ai",
    "packages/cloud-ai",
    "packages/arbitrator",
    "packages/calibration",
    "packages/engine",
    "packages/display",
    "apps/desktop/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["John Jesuyon <johnjesuyon68@gmail.com>"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros", "migrate"] }
companion-events = { path = "shared/events" }
companion-errors = { path = "shared/errors" }
companion-config = { path = "shared/config" }
companion-database = { path = "packages/database" }
companion-audio = { path = "packages/audio" }
companion-transcription = { path = "packages/transcription" }
companion-detection = { path = "packages/detection" }
companion-context = { path = "packages/context" }
companion-ai = { path = "packages/ai" }
companion-cloud-ai = { path = "packages/cloud-ai" }
companion-arbitrator = { path = "packages/arbitrator" }
companion-calibration = { path = "packages/calibration" }
companion-bible       = { path = "packages/bible" }
companion-engine      = { path = "packages/engine" }
companion-display     = { path = "packages/display" }

# Tauri requires panic = abort when staticlib is in crate-type
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
