[package]
name = "companion-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "companion_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                    = { version = "2", features = [] }
tauri-plugin-autostart   = "2"
serde                    = { version = "1", features = ["derive"] }
serde_json               = "1"

# Internal workspace crates
companion-events  = { path = "../../../shared/events" }
companion-display = { workspace = true }
