[package]
name = "companion-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "companion_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                    = { version = "2", features = [] }
tauri-plugin-autostart   = "2"
serde                    = { version = "1", features = ["derive"] }
serde_json               = "1"

# Async runtime
tokio = { workspace = true }

# Internal workspace crates
companion-events       = { path = "../../../shared/events" }
companion-display      = { workspace = true }
companion-bible        = { workspace = true }
companion-database     = { workspace = true }
companion-audio        = { workspace = true }
companion-transcription = { workspace = true }
companion-ai           = { workspace = true }
companion-engine       = { workspace = true }
companion-hymns        = { workspace = true }
companion-arbitrator   = { workspace = true }
